crates/edgedb_codegen/tests/macros/incorrect_args.rs
use edgedb_codegen_macros::edgedb_query;

fn main() {
	edgedb_query!(example_module, invalid);
}
